--- a/Calculator.html
+++ b/Calculator.html
@@ -12,11 +12,10 @@
     <div class="calculator">
         <div id="display" class="display">0</div>
         <div class="buttons">
-            <button class="button" onclick="clearDisplay()">C</button>
-            <button class="button" onclick="deleteLast()">DEL</button>
+            <button class="button" onclick="clearDisplay()">C</button>           
             <button class="button" onclick="appendValue('/')">/</button>
-            
-            
+            <button class="button" onclick="appendValue('%')">%</button>
+            <button class="button" onclick="deleteLast()">DEL</button>            
             <button class="button" onclick="appendValue('7')">7</button>
             <button class="button" onclick="appendValue('8')">8</button>
             <button class="button" onclick="appendValue('9')">9</button>
