--- a/Calculator.html
+++ b/Calculator.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fully Designed Calculator</title>
-    <link rel="stylesheet" href="body {.css">
+    <link rel="stylesheet" href="body.css">
 </head>
 
 <body>
     <div class="calculator">
         <div id="display" class="display">0</div>
         <div class="buttons">
-            <button class="button" onclick="clearDisplay()">C</button>           
+            <button class="button" onclick="clearDisplay()">C</button>
             <button class="button" onclick="appendValue('/')">/</button>
             <button class="button" onclick="appendValue('%')">%</button>
-            <button class="button" onclick="deleteLast()">DEL</button>            
+            <button class="button" onclick="deleteLast()">DEL</button>
             <button class="button" onclick="appendValue('7')">7</button>
             <button class="button" onclick="appendValue('8')">8</button>
             <button class="button" onclick="appendValue('9')">9</button>
@@ -27,14 +27,14 @@
             <button class="button" onclick="appendValue('1')">1</button>
             <button class="button" onclick="appendValue('2')">2</button>
             <button class="button" onclick="appendValue('3')">3</button>
-            <button class="button" onclick="appendValue('+')">+</button>           
+            <button class="button" onclick="appendValue('+')">+</button>
             <button class="button" onclick="appendValue('0')">0</button>
             <button class="button" onclick="appendValue('.')">.</button>
             <button class="button equal" onclick="calculate()">=</button>
 
         </div>
     </div>
-    <script src="function appendValue(value) {.js"></script>
+    <script src="function.js"></script>
 </body>
 
 </html>
