--- a/Calculator.html
+++ b/Calculator.html
@@ -12,22 +12,22 @@
     <div class="calculator">
         <div id="display" class="display">0</div>
         <div class="buttons">
-            <button class="button" onclick="clearDisplay()">C</button>
-            <button class="button" onclick="appendValue('/')">/</button>
-            <button class="button" onclick="appendValue('%')">%</button>
-            <button class="button" onclick="deleteLast()">DEL</button>
+            <button class="button fun" onclick="clearDisplay()">C</button>
+            <button class="button fun" onclick="appendValue('/')">/</button>
+            <button class="button fun" onclick="appendValue('%')">%</button>
+            <button class="button fun" onclick="deleteLast()">DEL</button>
             <button class="button" onclick="appendValue('7')">7</button>
             <button class="button" onclick="appendValue('8')">8</button>
             <button class="button" onclick="appendValue('9')">9</button>
-            <button class="button" onclick="appendValue('*')">*</button>
+            <button class="button fun" onclick="appendValue('*')">*</button>
             <button class="button" onclick="appendValue('4')">4</button>
             <button class="button" onclick="appendValue('5')">5</button>
             <button class="button" onclick="appendValue('6')">6</button>
-            <button class="button" onclick="appendValue('-')">-</button>
+            <button class="button fun" onclick="appendValue('-')">-</button>
             <button class="button" onclick="appendValue('1')">1</button>
             <button class="button" onclick="appendValue('2')">2</button>
             <button class="button" onclick="appendValue('3')">3</button>
-            <button class="button" onclick="appendValue('+')">+</button>
+            <button class="button fun" onclick="appendValue('+')">+</button>
             <button class="button" onclick="appendValue('0')">0</button>
             <button class="button" onclick="appendValue('.')">.</button>
             <button class="button equal" onclick="calculate()">=</button>
